# SubReparo

./: .gitmodules  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  subreparo_mobile_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bootstrap-sdk-foundation.yml  install-sdk-submodule.yml  subreparo-immune-ci.yml  subreparo-immune.yml  subreparo-sdk-scaffold.yml
desktop/tray/: README.md
fleet/: README.md
frame/reparodynamics/: README.md
frame/reparodynamics/src/: lib.rs
installers/: README.md
installers/auto_update/: README.md
installers/linux/: README.md
installers/macos/: README.md
installers/windows/: README.md
packaging/macos/: README.md
packaging/windows/: README.md
scripts/: bootstrap-sdk-foundation.ps1  bootstrap-sdk-foundation.sh  install-subreparo-immune.ps1  install-subreparo-immune.sh  start-subreparo-control-center.cmd  start-subreparo-control-center.command  start-subreparo-control-center.sh  verify-subreparo-sdk.sh
sdk/: README.md
sdk/polkadot-sdk/: .subreparo-sdk-pointer
sdk/polkadot-sdk/frame/subreparo/: Cargo.toml  README.md
sdk/polkadot-sdk/frame/subreparo-controller/: Cargo.toml  README.md
sdk/polkadot-sdk/frame/subreparo-controller/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
sdk/polkadot-sdk/frame/subreparo-finality-backoff/: Cargo.toml  README.md
sdk/polkadot-sdk/frame/subreparo-finality-backoff/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
sdk/polkadot-sdk/frame/subreparo/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
sdk/polkadot-sdk/subreparo/devnet/: SCENARIOS.md
sdk/polkadot-sdk/subreparo/docs/: BENCHMARKING_COMMANDS.md  CI_STATUS_NOTE.md  EVENT_REPLAY_SCHEMA.md  NEXT_10_UPDATES.md  OBSERVABILITY.md  REVIEWER_README.md  RUNTIME_EXAMPLE_WIRING.md  RUNTIME_READINESS_MATRIX.md  SDK_INTEGRATION.md  STORAGE_VERSIONING.md  VERIFICATION_CHECKLIST.md  WORKSPACE_INTEGRATION.md
sdk/polkadot-sdk/subreparo/metrics/: prometheus-example.txt
sdk/polkadot-sdk/subreparo/patches/: runtime-example.patch.md  workspace-members.patch.md
subreparo/docs/: ADAPTIVE_REPAIR_PLATFORM.md  AEGIS_MESH.md  AGENT_COMPONENTS.md  ARCHITECTURE.md  BATCH_STATUS_2026_06_19.md  CLI_REFERENCE.md  CONTRIBUTING_SUBREPARO.md  CONTROL_CENTER_LAUNCH.md  CORTEX_ARCHITECTURE.md  DASHBOARD_NEXT.md  DESKTOP_APP_VISION.md  IMMUNE_AGENT_CORE.md  IMMUNE_NEXT_BATCH.md  IPHONE_ONLY_SETUP.md  MESSAGING_CONNECTORS.md  MOBILE_PREVIEW.md  MODE_PROFILES.md  NATIVE_FILE_WATCHER.md  NOTIFICATIONS.md  PALLET_SECURITY_REVIEW.md  PALLET_SKETCH.md  PLATFORM_COMPLETION.md  QUARANTINE_SAFETY.md  RELEASE_CHECKLIST.md  REPARODYNAMICS.md  REPORT_SCHEMA.md  ROADMAP.md  RULE_CHANGELOG.md  SAFE_SKILLS.md  SBOM_AND_DEPENDENCY_RISK.md  SDK_BASE.md  SDK_TGRM_RUNTIME_PLAN.md  SUBREPARO_FACTORY.md  SWARMS.md
subreparo/examples/: basic-run.md
subreparo/harness/: test_tgrm_invariants.py  tgrm_vs_baseline.py
tools/subreparo-immune/: README.md  TESTING.md  pyproject.toml
tools/subreparo-immune/src/subreparo_immune/: aegis.py  agent_components.py  agent_core.py  agent_factory.py  agent_proofs.py  alerts.py  alerts_cli.py  approval_queue.py  audit.py  baseline.py  browser_scan.py  clawdbot_backend.py  cli.py  cortex_cli.py  cortex_memory.py  cortex_models.py  cortex_planner.py  cortex_policy.py  dashboard.py  dependency_risk.py  detectors.py  engine.py  explain.py  factory_cli.py  feedback.py  firewall.py  fleet_cli.py  fleet_dashboard.py  forensic_report.py  hash_lookup.py  hash_lookup_cli.py  immune_agent_cli.py  immune_patrol.py  incident_bundle.py  installer_cli.py  installer_manifest.py  inventory.py  launch_check.py  launch_check_cli.py  learning_cli.py  (+54 more)
tools/subreparo-immune/tests/: test_agent_components.py  test_agent_core.py  test_agent_factory.py  test_cli_entrypoints.py  test_cortex.py  test_cortex_status.py  test_dashboard.py  test_dashboard_control_center.py  test_dashboard_mobile_preview.py  test_dashboard_tabs.py  test_detection_reporting.py  test_engine.py  test_feedback_trust.py  test_feedback_trust_policy.py  test_hash_lookup.py  test_immune_patrol.py  test_launch_check.py  test_learning_profile.py  test_messaging_connectors.py  test_mobile_preview.py  test_modes_sbom_dependency_notifications.py  test_monitor_targets.py  test_native_watcher_notifications.py  test_network_memory.py  test_pdf_report.py  test_platform_completion.py  test_policy_timeline_trends_inventory_firewall.py  test_quality.py  test_quarantine_restore.py  test_registry_process_scan.py  test_reparodynamics.py  test_runtime_privacy_audit_bundle.py  test_setup_watcher_signature.py  test_skills.py  test_startup_browser_shortcut_policy.py  test_swarm_orchestrator.py  test_swarm_tools.py  test_watcher.py  test_watcher_targets.py
