[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subreparo-immune"
version = "0.2.0"
description = "Local-first repair-memory engine for AI agents, software projects, and autonomous systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Cody R. Jenkins" }]
keywords = ["subreparo", "reparodynamics", "repair-memory", "self-healing", "ai-agents", "polkadot-sdk", "substrate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/BoneManTGRM/SubReparoV.2"
Repository = "https://github.com/BoneManTGRM/SubReparoV.2"
Issues = "https://github.com/BoneManTGRM/SubReparoV.2/issues"

[project.scripts]
subreparo-immune = "subreparo_immune.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
