[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subreparo-immune"
version = "0.2.0"
description = "Local-first repair-memory engine for AI agents, software projects, and autonomous systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Cody R. Jenkins" }]
keywords = ["subreparo", "reparodynamics", "repair-memory", "self-healing", "ai-agents", "polkadot-sdk", "substrate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
native-watch = ["watchdog>=4,<7"]

[project.urls]
Homepage = "https://github.com/BoneManTGRM/SubReparo"
Repository = "https://github.com/BoneManTGRM/SubReparo"
Issues = "https://github.com/BoneManTGRM/SubReparo/issues"

[project.scripts]
subreparo-immune = "subreparo_immune.cli:main"
subreparo-monitor = "subreparo_immune.monitor_cli:main"
subreparo-sbom = "subreparo_immune.sbom_cli:main"
subreparo-modes = "subreparo_immune.modes_cli:main"
subreparo-quarantine = "subreparo_immune.quarantine_cli:main"
subreparo-cortex = "subreparo_immune.cortex_cli:main"
subreparo-hash-lookup = "subreparo_immune.hash_lookup_cli:main"
subreparo-learning = "subreparo_immune.learning_cli:main"
subreparo-immune-agent = "subreparo_immune.immune_agent_cli:main"
subreparo-pdf-report = "subreparo_immune.pdf_report_cli:main"
subreparo-launch-check = "subreparo_immune.launch_check_cli:main"
subreparo-mobile-preview = "subreparo_immune.mobile_preview_cli:main"
subreparo-alerts = "subreparo_immune.alerts_cli:main"
subreparo-tray = "subreparo_immune.tray_cli:main"
subreparo-installer = "subreparo_immune.installer_cli:main"
subreparo-updater = "subreparo_immune.updater_cli:main"
subreparo-fleet = "subreparo_immune.fleet_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
