[package]
name = "pallet-subreparo-controller"
version = "0.1.0"
edition = "2021"
description = "Bounded TGRM controller pallet for SubReparo runtime experiments"
license = "Apache-2.0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-support = { default-features = false, path = "../../support" }
frame-system = { default-features = false, path = "../../system" }
pallet-subreparo = { default-features = false, path = "../subreparo" }
sp-std = { default-features = false, path = "../../../primitives/std" }

[dev-dependencies]
sp-core = { path = "../../../primitives/core" }
sp-io = { path = "../../../primitives/io" }
sp-runtime = { path = "../../../primitives/runtime" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-subreparo/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-subreparo/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-subreparo/try-runtime",
]
